--- a/badge/index.html
+++ b/badge/index.html
@@ -11,11 +11,13 @@
   var Badge = React.createClass({
     // Define our render method.  The render method is the only required method
     // in a React component.
-    render: function() {
+    
+    render: () => {
       // Return a snippet of JSX consisting of a button and a span.
       // The button is assigned a class name and a type.  Inside of the button
       // we place both a title and a number.  The number is wrapped inside of a span
       // with class badge.
+      
       return <button className="btn btn-primary" type="button">
         {this.props.title} <span className="badge">{this.props.number}</span>
       </button>
